# music-game

./: CMakeLists.txt  chart.cpp  chart.h  editorwidget.cpp  editorwidget.h  gamewidget.cpp  gamewidget.h  main.cpp  note.h  widget.cpp  widget.h
music/: song1.json  song2.json
